--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet">
      <!-- mengarah Ke Style CSS -->
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="Projek Hilmi/css/style.css">
 </head>
 <body>
     <header>
